src/css/editor.scss
/**
 * #.# Common SCSS
 *
 * Can include things like variables and mixins
 * that are used across the project.
 *
*/
@import './maxi-themes.scss';
@import './backend-variables.scss';
@import './native-components.scss';
@import './inserter-card.scss';

/*****************
* General settings
******************/
.interface-interface-skeleton {
	&__sidebar {
		overflow-x: hidden;
		scrollbar-gutter: stable;
	}

	&__content {
		// Removing background-color which this class has in FSE editor
		// to make the iframe look good with small breakpoints
		background-color: transparent !important;
	}
}

// Scrollbar fix for Safari
@media not all and (min-resolution: 0.001dpcm) {
	@supports (-webkit-appearance: none) {
		.interface-interface-skeleton__sidebar {
			padding-right: 15px;
		}
	}
}

h2.gx_error {
	font-size: 16px;
	text-align: center;
}
.maxi-sidebar,
.maxi-sidebar *:not(i),
.maxi-popover *:not(i) {
	color: var(--maxi-grey-11-color);
	font-family: 'Roboto', Helvetica, Arial, Lucida, sans-serif !important;
	font-size: 12px;
	font-weight: normal;
}

.block-editor-inserter {
	color: #fff !important;
	height: 100%;

	&__toggle {
		svg {
			fill: #fff !important;
		}
	}
}

/*****************
* Editor settings
******************/
.edit-post-visual-editor,
.edit-site-visual-editor {
	i {
		font-style: normal;
	}
}

/*****************
* Maxi Blocks
******************/
body {
	.maxi-container-block {
		& > .block-list-appender {
			width: 100%;
			max-width: none;
			margin: 0;
		}

		& > .block-editor-block-list__layout {
			padding: 0;

			& > .wp-block-maxi-blocks-row-maxi {
				justify-content: space-between;
				padding: 0 !important;
			}
		}
	}
}
.maxi-block {
	.block-editor-block-list__layout {
		&:focus:after {
			box-shadow: none !important;
		}
	}
	&:hover {
		& > .block-editor-block-list__layout {
			& > .block-list-appender {
				.block-editor-button-block-appender {
					opacity: 1 !important;
					visibility: visible !important;
				}
			}
		}
	}
	.block-list-appender.wp-block {
		position: relative;
		width: 100%;
		max-width: none;
		pointer-events: auto !important;

		&:has(> .maxi-block-inserter) {
			height: 100%;
		}
	}

	.maxi-block .maxi-block-inserter {
		height: 100%;
		display: flex;
		align-items: center;
	}

	&.maxi-block--has-link .maxi-text-block__content {
		transition: color 0.3s ease;
	}

	&__settings {
		&__upload-button {
			width: 30px;
			height: 30px;
			box-shadow: -3px 3px 6px 0px rgb(0 0 0 / 16%) !important;
			border-radius: 0;
			background: #fff;
			visibility: visible;
			transition: 0.3s;

			svg {
				fill: #007cba;
				width: 15px;
				height: 15px;
			}
			&:hover {
				svg {
					fill: #ff4a17;
				}
			}
		}
	}
}

/****************
* Gutenberg Panel
****************/
.maxi-controls {
	background: #f5f5f5;

	> div {
		background: #f5f5f5;
	}

	.components-panel__body {
		// This should be fix
		border-top: none;

		.components-panel__body-title {
			display: none !important;
		}

		.maxi-panel:first-child {
			margin-top: 0 !important;
		}
	}

	.block-editor-block-inspector__advanced {
		display: none;
	}
}

body.maxi-blocks--active.maxi-blocks--accessibility .maxi-sidebar {
	input[type='text'],
	input[type='number'],
	textarea,
	select {
		border-color: var(--maxi-accessibility-grey-1-color);

		&:focus {
			border-color: var(--maxi-secondary-color);
			box-shadow: 0 0 0 1px var(--maxi-secondary-color);
			outline: 2px solid transparent;
		}
	}
	button.maxi-color-control__palette-box,
	button.maxi-tabs-control__button,
	.maxi-components-button {
		border-color: var(--maxi-accessibility-grey-1-color);
	}
	button.maxi-color-control__palette-box--active,
	button.maxi-color-control__palette-box:focus,
	button.maxi-tabs-control__button--selected,
	button.maxi-tabs-control__button:focus,
	.maxi-components-button:focus:not(:disabled) {
		z-index: 2;
		border-color: var(--maxi-secondary-color);
		box-shadow: 0 0 0 1px var(--maxi-secondary-color);
		outline: 2px solid transparent;
	}
	.maxi-base-control .components-maxi-control__reset-button {
		border-color: var(--maxi-accessibility-grey-1-color);
	}
}

body.maxi-blocks--active .maxi-sidebar,
body .maxi-popover,
body .toolbar-item__popover {
	input[type='text'],
	input[type='number'],
	textarea,
	select {
		flex: 1;
		max-height: unset !important;
		min-height: unset;
		padding: 10px;
		border: 1.5px solid var(--maxi-grey-1-color);
		border-radius: 5px !important;
		color: var(--maxi-black-1-color);
		background-color: #fff;
		font-size: 12px;
		line-height: 12px;

		&:focus {
			box-shadow: none;
			outline: none;
			border: 1.5px solid var(--maxi-grey-4-color);
		}
		&:hover {
			color: var(--maxi-black-1-color);
		}
		&:active {
			color: var(--maxi-black-1-color);
		}
	}
	input[type='number'] {
		padding-right: 0;
	}
	input[type='number']::-webkit-inner-spin-button {
		height: 31px;
		opacity: 1;
	}
	.components-range-control__number {
		.components-input-control__backdrop {
			border: none;
		}
	}
	.maxi-components-button:focus:not(:disabled) {
		box-shadow: none;
		outline: none;
	}
	button.components-range-control__reset,
	button.components-circular-option-picker__clear {
		font-size: 0 !important;

		&:before {
			content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.34 11.5" role="img" aria-hidden="true" focusable="false"><path fill="rgba(180, 180, 180, 0.8)" d="M11.32.75a.74.74 0 0 0-.75-.75.76.76 0 0 0-.75.75v1.49A5.6 5.6 0 1 0 5.6 11.5a5.44 5.44 0 0 0 1.48-.2.74.74 0 0 0 .52-.92.76.76 0 0 0-.92-.53A4.1 4.1 0 1 1 9.22 4H6.57a.75.75 0 0 0 0 1.5h4a.75.75 0 0 0 .53-.22.77.77 0 0 0 .22-.54Z"></path></svg>') !important;
			width: 14px;
			height: 14px;
			margin: auto;
			color: var(--maxi-black-1-color);
		}
	}
	.components-panel {
		background: transparent;
		border: none;
	}
	.components-simple-tooltip {
		color: #fff;
	}
}

body.maxi-blocks--active .components-tooltip {
	opacity: 0.95 !important;
	pointer-events: none;
}

body.maxi-blocks--active.rtl .maxi-sidebar,
body.rtl .maxi-popover,
body.rtl .toolbar-item__popover {
	input[type='number'] {
		padding: 0 8px 0 0px;
	}
}

body .toolbar-item__popover {
	input[type='text'],
	input[type='number'],
	textarea,
	select {
		border-color: #80828a;
	}
	input[type='number'] {
		padding-right: 0;
	}
	.components-range-control__number {
		.components-input-control {
			&__container {
				background-color: transparent;
			}
			&__input {
				color: #fff;
				border-color: #80828a;
			}
		}
	}
}

.components-base-control {
	&__field {
		.components-select-control {
			&__input {
				&:disabled {
					background-color: #f2f2f2 !important;
				}
			}
		}
	}
}

/************
* Unit Select
************/
.maxi-base-control {
	.maxi-dimensions-control__units {
		margin-bottom: 0 !important;

		.maxi-base-control__field {
			margin-bottom: 0;

			.maxi-select-control__input {
				min-width: 3.2rem;
				max-width: 100%;
			}
		}
	}
}

/*******************************
* Style Card Editor Boat Icon and Template library Icon
*******************************/
#template-library-fill,
svg path#styleCardMenu_a,
svg path#styleCardBoat_a {
	fill: rgba(var(--maxi-active-sc-color), 1);
}
.maxi-responsive-close svg g,
.template-library-cloud-icon path,
#maxi-button__go-to-customizer svg,
svg path#styleCardMenu_b,
svg path#styleCardBoat_b,
#styleCardBoat_b {
	stroke: #081219;
}
.maxi-responsive-close {
	background-color: rgba(var(--maxi-active-sc-color), 1);
}
.maxi-responsive-close:hover svg g {
	stroke: #fff;
}

/*******************************
* Grid lines
*******************************/

.maxi-block {
	&::after {
		content: '';
		position: absolute;
		pointer-events: none;
		top: -1px !important;
		right: -1px !important;
		bottom: -1px !important;
		left: -1px !important;
		border: 2px solid var(--maxi-light-blue-3-color);
		border-radius: 0;
		box-shadow: none !important;
		opacity: 0;
	}

	&.maxi-block--repeater::after {
		border-color: #7a00df;
	}

	&.maxi-block--full-width::after {
		width: calc(100% - 4px);
	}

	&:not(.is-selected) {
		&:hover {
			&::after {
				content: '';
				position: absolute;
				pointer-events: none;
				opacity: 1;
			}
		}
	}

	&.is-selected {
		&::after {
			opacity: 1;

			&:not(.maxi-block--is-repeater) {
				border-color: #ff4a17;
			}
		}
		&:focus {
			box-shadow: none;
		}
	}

	&.maxi-container-block {
		&::after {
			top: 0px !important;
			right: 0px !important;
			bottom: 0px !important;
			left: 0px !important;
		}
		.maxi-block-indicators__padding--left {
			position: absolute;
			left: 4px;
		}
		.maxi-block-indicators__padding--right {
			position: absolute;
			right: 4px;
		}
	}
}

/*******************************
* RTL
*******************************/

html[dir='rtl'] {
	.interface-interface-skeleton__sidebar {
		scrollbar-gutter: unset;
	}
	.maxi-color-control
		.chrome-picker
		> div
		> div:last-of-type:last-of-type
		div:not(.saturation-white, .saturation-black)
		label,
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__sc__actions
		button,
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__sc__more-sc--select,
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__sc__ie
		button,
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__sc
		a.components-button,
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__sc__save
		input[type='text'],
	.maxi-responsive-selector .action-buttons__button svg {
		margin-right: 0;
		margin-left: 5px;
	}
	.maxi-responsive-selector .action-buttons__help svg {
		margin-left: 2px;
	}
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__quick-color-presets__reset-button
		svg,
	.maxi-responsive-selector .maxi-style-cards__popover__title > svg {
		margin-right: 0;
		margin-left: 10px;
	}
	body.maxi-blocks--active select.maxi-select-control__input,
	.maxi-responsive-selector
		.maxi-style-cards__popover
		.maxi-style-cards__sc__more-sc--select
		.maxi-select-control__input {
		padding-right: 20px;
	}
	.maxi-advanced-number-control .maxi-base-control__field > *,
	.maxi-advanced-number-control .components-base-control__field > * {
		margin-left: 0;
		margin-right: 4px;
	}
	.maxi-tab-content__box
		.maxi-base-control.maxi-typography-control__orientation,
	.maxi-tab-content__box
		.maxi-base-control.maxi-typography-control__direction {
		margin-bottom: 8px;
	}
	.rtl .maxi-base-control .components-maxi-control__reset-button {
		margin-left: 0;
	}
}

/***************
* Upload button
***************/
.maxi-settings-media-upload {
	&__button {
		width: 30px;
		height: 30px;
		box-shadow: -3px 3px 6px 0px rgb(0 0 0 / 16%) !important;
		border-radius: 0;
		background: #fff;
		visibility: visible;
		transition: 0.3s;

		svg {
			fill: #007cba;
			width: 15px;
			height: 15px;
		}
		&:hover {
			svg {
				fill: #ff4a17;
			}
		}
	}
}

/**
* Hide scrollbar in iframe editor #3574
*/
body[maxi-blocks-responsive] {
	&::-webkit-scrollbar {
		width: 0;
	}
}

